--- a/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/Views/Home/Index.cshtml
+++ b/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/Views/Home/Index.cshtml
@@ -8,79 +8,20 @@
     <link rel="icon" type="image/png" href="~/template/paper-kit/assets/paper_img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Paper Kit by Creative Tim</title>
+    <title>Knowledge Basement | by Vladislav Guleaev</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="viewport" content="width=device-width" />
 
     <link href="~/template/paper-kit/bootstrap3/css/bootstrap.css" rel="stylesheet" />
     <link href="~/template/paper-kit/assets/css/ct-paper.css" rel="stylesheet" />
     <link href="~/template/paper-kit/assets/css/demo.css" rel="stylesheet" />
+    <link href="~/css/landing-page.min.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
 
-
-    <style>
-        #navbar nav {
-            padding: 0px;
-        }
-
-        .navbar-brand i {
-            color: #548c8e;
-            margin-top: -10px;
-        }
-
-        .navbar-brand span {
-            color: #548c8e;
-            margin-left: 30px;
-        }
-
-        .navbar-item{
-            color: #548c8e !important;
-        }
-
-        .main-header {
-            background-image: url(images/cool-header-img.jpg);
-            background-size: cover;
-            background-color: #548c8e;
-            background-position: center center;
-            margin-top: -100px;
-            min-height: 600px;
-        }
-
-            .main-header .motto {
-                color: #3e3c3c;
-                padding-top: 25vh;
-                text-align: center;
-                z-index: 3;
-            }
-
-            .main-header i {
-                font-size: 30px;
-                margin: 20px;
-            }
-
-        .footer-demo {
-            background-attachment: fixed;
-            position: relative;
-            line-height: 20px;
-        }
-
-        .section-padding {
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-
-        #start {
-            margin-top: -15px;
-        }
-
-        #offers p {
-            min-height: 100px;
-        }
-    </style>
 
 </head>
 <body>
@@ -156,9 +97,10 @@
                         <h5>
                             Have you ever tried to save some important or necessary information somewhere at your PC in text files?
                         </h5>
-                        <h5>Probably yes. But when files become larger it's getting too diffcult to maintain. Also you can't share it through your
-                        devices. It would be nice to have your personal information online and in a safe place. If you are interested, dont hesitate
-                        and register at Knowledge Basement to start organize your data fast, safe and easy.
+                        <h5>
+                            Probably yes. But when files become larger it's getting too diffcult to maintain. Also you can't share it through your
+                            devices. It would be nice to have your personal information online and in a safe place. If you are interested, dont hesitate
+                            and register at Knowledge Basement to start organize your data fast, safe and easy.
                         </h5>
                         <br>
                         <a href="#" class="btn btn-danger btn-fill">See Details</a>
@@ -175,17 +117,17 @@
                     <div class="col-md-4 column text-center">
                         <h4>Create projects</h4>
                         <p>Any piece of information belongs to something. We call it project. Project can be considered as root folder for articles and other indented folders.</p>
-                        <a class="btn btn-danger btn-simple" href="#"><i class="fa fa-briefcase fa-2x"></i></a>
+                        <a class="btn btn-danger btn-simple" href=""><i class="fa fa-briefcase fa-2x"></i></a>
                     </div>
                     <div class="col-md-4 column text-center">
                         <h4>Define categories</h4>
                         <p>You can create your personal categories. This helps you search and filter data faster. Also it logicaly separates important content.</p>
-                        <a class="btn btn-danger btn-simple" href="#"><i class="fa fa-bookmark fa-2x"></i></a>
+                        <a class="btn btn-danger btn-simple" href=""><i class="fa fa-bookmark fa-2x" style="padding-left: 10px;"></i></a>
                     </div>
                     <div class="col-md-4 column text-center">
                         <h4>Add folders</h4>
                         <p>Organize your data with pleasure. Create as much folders and levels of indentention as you want! Additionaly you can chose icons for projects and articles.</p>
-                        <a class="btn btn-danger btn-simple" href="#"><i class="fa fa-folder fa-2x"></i></a>
+                        <a class="btn btn-danger btn-simple" href=""><i class="fa fa-folder fa-2x"></i></a>
                     </div>
                 </div>
                 <br />
@@ -196,13 +138,13 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h2>Do you like what you see?</h2>
-                    <p>Cause if you do, it can be yours for free. Hit the button below to navigate to Creative Tim where you can find the kit. Start a new project or give an old Bootstrap project a new look, we've got you covered. </p>
+                    <p>Cause if you do, you should register right now for free and start store your data with our service. Hit the button below to start building your personal Knowledge Basement where you can ogranize you data with no stress. Just try it now! </p>
                 </div>
                 <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 download-area">
                     <a href="http://www.creative-tim.com/product/paper-kit" class="btn btn-danger btn-fill btn-block btn-lg">Create my Knowledge Bank</a>
                 </div>
             </div>
-            <div class="row sharing-area text-center">
+            <div id="sharing-area" class="row sharing-area text-center">
                 <h3>Sharing is caring!</h3>
                 <a href="#" class="btn">
                     <i class="fa fa-twitter"></i>
@@ -225,7 +167,7 @@
                     </ul>
                 </nav>
                 <div class="copyright pull-right">
-                    © @DateTime.Now.Year, designed with <i class="fa fa-heart heart"></i> by Vladislav Guleaev
+                    © @DateTime.Now.Year, designed with <i class="fa fa-heart heart" style="color: #b10d0d;"></i> by Vladislav Guleaev
                 </div>
             </div>
         </footer>
