--- a/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/Views/Account/Register.cshtml
+++ b/.NET Projects 2017/KnowledgeBasement/KnowledgeBasement.Web/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="~/template/paper-kit/assets/paper_img/favicon.ico">
+    <link rel="icon" type="image/png" href="~/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Knowledge Basement | by Vladislav Guleaev</title>
@@ -35,7 +35,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="www.creative-tim.com">Creative Tim</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                    <i class="fa fa-university fa-2x hidden-xs"></i>
+                    <span>Knowledge Basement</span>
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -81,7 +84,7 @@
                 </div>
             </div>
             <div class="footer register-footer text-center">
-                <h6>&copy; 2015, made with <i class="fa fa-heart heart"></i> by Creative Tim</h6>
+                <h6>© @DateTime.Now.Year, designed with <i class="fa fa-heart heart" style="color: #b10d0d;"></i> by Vladislav Guleaev</h6>
             </div>
         </div>
     </div>
